cluster/apps/storage/kopia-web/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kopia
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
    goldilocks.fairwinds.com/enabled: "true"
