cluster/apps/storage/kopia-web/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kopia
  namespace: kopia
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`kopia.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: kopia
          port: 80
  tls:
    secretName: ${SECRET_CERT}
