cluster/apps/storage/kopia-web/kopia-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kopia
  namespace: kopia
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`kopia.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: kopia
          port: 8080
  tls:
    secretName: ${SECRET_CERT}
